# basics-opc-ua

./: LICENSE  README.md
docker-cpp-build/: Dockerfile  docker.sh
opcua-asyncio-client/: README.md  build.sh  docker.sh
opcua-asyncio-client/src/: main.py
open62541-server/: .gitignore  CMakeLists.txt  README.md  build.sh  docker.sh  install.sh  libs.sh
open62541-server/cmake/: linux-amd64.cmake  linux-arm64.cmake  linux-armel.cmake  linux-armhf.cmake  windows-x86.cmake  windows-x86_64.cmake
open62541-server/libs/: open62541-linux-amd64.sh  open62541-linux-arm64.sh  open62541-linux-armel.sh  open62541-linux-armhf.sh  open62541-windows-x86.sh  open62541-windows-x86_64.sh  openssl-linux-amd64.sh  openssl-linux-arm64.sh  openssl-linux-armel.sh  openssl-linux-armhf.sh  openssl-windows-x86.sh  openssl-windows-x86_64.sh
open62541-server/nodesets/: example_nodeset.xml  nodesets.sh
open62541-server/scripts/: build-linux-amd64.sh  build-linux-arm64.sh  build-linux-armel.sh  build-linux-armhf.sh  build-windows-x86.sh  build-windows-x86_64.sh
open62541-server/src/: main.cpp
open62541-server/src/ggolbik/opcua/: OpcUaServer.cpp  OpcUaServer.h
open62541-server/src/ggolbik/opcua/logging/: ConsoleLogger.cpp  ConsoleLogger.h  ILogger.h  IUaLogger.h  Level.h  Logger.cpp  Logger.h  RootLogger.cpp  RootLogger.h  UaLogger.cpp  UaLogger.h
open62541-server/src/nodesets/: di.c  di.h  example_nodeset.c  example_nodeset.h
ua.netstandard-client/: Directory.Build.props  README.md  build.sh  docker.sh
ua.netstandard-client/src/: ClientSamples.cs  Program.cs  UAClient.cs  UaDotnetStandardClient.csproj  config.xml
